--- a/SmartManager/Views/Pages/EditFace.xaml
+++ b/SmartManager/Views/Pages/EditFace.xaml
@@ -3,9 +3,11 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:extensions="clr-namespace:Shared.Extensions;assembly=Shared"
     xmlns:local="clr-namespace:SmartManager.Views.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    xmlns:ws="https://schemas.elecho.dev/wpfsuite"
     Title="EditFace"
     d:DataContext="{d:DesignInstance local:EditFace,
                                      IsDesignTimeCreatable=False}"
@@ -17,7 +19,194 @@
     ScrollViewer.CanContentScroll="False"
     mc:Ignorable="d">
 
+    <Page.Resources>
+        <Style BasedOn="{StaticResource MyButtonStyle}" TargetType="ui:Button" />
+    </Page.Resources>
+
     <Grid Margin="16">
         <TextBox Name="XuNiBox" Width="0" />
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="0.5*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Border
+                Grid.Column="0"
+                Background="{ui:ThemeResource ControlFillColorDefaultBrush}"
+                CornerRadius="4">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1.5*" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Grid Grid.Row="0">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="0.06*" />
+                            <RowDefinition Height="1*" />
+                            <RowDefinition Height="0.06*" />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="0.5*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="0.5*" />
+                        </Grid.ColumnDefinitions>
+                        <Grid Grid.Row="1" Grid.Column="1">
+                            <ui:Image
+                                HorizontalAlignment="Stretch"
+                                VerticalAlignment="Stretch"
+                                CornerRadius="4"
+                                RenderOptions.BitmapScalingMode="HighQuality"
+                                Source="{Binding ViewModel.FaceImage, Mode=OneWay}"
+                                Stretch="UniformToFill" />
+                        </Grid>
+                    </Grid>
+                    <Grid
+                        Grid.Row="1"
+                        Margin="32,48,32,0"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Top">
+                        <ui:TextBox
+                            HorizontalAlignment="Center"
+                            FontSize="32"
+                            Style="{StaticResource SelectableTextBlockStyle}"
+                            Text="{Binding ViewModel.Name, Mode=OneWay}"
+                            TextAlignment="Center"
+                            TextWrapping="Wrap" />
+                    </Grid>
+                    <Grid
+                        Grid.Row="2"
+                        Margin="16"
+                        VerticalAlignment="Bottom">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <ui:Button
+                            Grid.Column="0"
+                            Margin="0,0,8,0"
+                            HorizontalAlignment="Stretch"
+                            Appearance="Primary"
+                            Command="{Binding ViewModel.EditFaceButtonClickCommand, Mode=OneWay}"
+                            Content="更改"
+                            FontSize="24"
+                            IsEnabled="{Binding ViewModel.IsEditButtonEnabled, Mode=OneWay}" />
+                        <ui:Button
+                            Grid.Column="1"
+                            Margin="8,0,0,0"
+                            HorizontalAlignment="Stretch"
+                            Command="{Binding ViewModel.GoBackCommand, Mode=OneWay}"
+                            Content="返回"
+                            FontSize="24" />
+                    </Grid>
+                </Grid>
+            </Border>
+            <ws:ScrollViewer
+                Grid.Column="1"
+                Margin="8,0,0,0"
+                ws:StylusTouchDevice.Simulate="True"
+                PanningMode="VerticalOnly">
+                <StackPanel Margin="0,0,12,0">
+                    <ui:CardExpander IsExpanded="True">
+                        <ui:CardExpander.Header>
+                            <ui:TextBlock FontSize="24" Text="必要信息" />
+                        </ui:CardExpander.Header>
+                        <ui:CardExpander.Content>
+                            <StackPanel>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
+                                    <ui:TextBlock
+                                        Grid.Column="0"
+                                        FontSize="24"
+                                        Text="姓名：" />
+                                    <ui:TextBox
+                                        Grid.Column="1"
+                                        BorderThickness="0"
+                                        FontSize="18"
+                                        PreviewKeyDown="TextBox_PreviewKeyDown"
+                                        Text="{Binding ViewModel.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                        TextWrapping="Wrap" />
+                                </Grid>
+                            </StackPanel>
+                        </ui:CardExpander.Content>
+                    </ui:CardExpander>
+                    <ui:CardExpander Margin="0,8,0,0" IsExpanded="True">
+                        <ui:CardExpander.Header>
+                            <ui:TextBlock FontSize="24" Text="附加信息" />
+                        </ui:CardExpander.Header>
+                        <ui:CardExpander.Content>
+                            <StackPanel>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
+                                    <ui:TextBlock
+                                        Grid.Column="0"
+                                        FontSize="24"
+                                        Text="性别：" />
+                                    <ui:TextBox
+                                        Grid.Column="1"
+                                        BorderThickness="0"
+                                        FontSize="18"
+                                        PreviewKeyDown="TextBox_PreviewKeyDown"
+                                        Text="{Binding ViewModel.Sex, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                        TextWrapping="Wrap" />
+                                </Grid>
+                                <Grid Margin="0,6,0,0">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
+                                    <ui:TextBlock
+                                        Grid.Column="0"
+                                        FontSize="24"
+                                        Text="年龄：" />
+                                    <ui:NumberBox
+                                        Grid.Column="1"
+                                        BorderThickness="0"
+                                        FontSize="18"
+                                        PreviewKeyDown="TextBox_PreviewKeyDown"
+                                        Text="{Binding ViewModel.Age, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                        TextWrapping="Wrap" />
+                                </Grid>
+                                <Grid Margin="0,6,0,0">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
+                                    <ui:TextBlock
+                                        Grid.Column="0"
+                                        FontSize="24"
+                                        Text="加入时间：" />
+                                    <DatePicker
+                                        Grid.Column="1"
+                                        BorderThickness="0"
+                                        FontSize="18"
+                                        PreviewKeyDown="TextBox_PreviewKeyDown"
+                                        Text="{Binding ViewModel.JoinTime, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                </Grid>
+                            </StackPanel>
+                        </ui:CardExpander.Content>
+                    </ui:CardExpander>
+                    <ui:CardExpander Margin="0,8,0,0">
+                        <ui:CardExpander.Header>
+                            <ui:TextBlock FontSize="24" Text="特征信息" />
+                        </ui:CardExpander.Header>
+                        <ui:CardExpander.Content>
+                            <ui:TextBox
+                                BorderThickness="0"
+                                FontSize="18"
+                                IsReadOnly="True"
+                                Text="{Binding ViewModel.Feature, Mode=OneWay}"
+                                TextWrapping="Wrap" />
+                        </ui:CardExpander.Content>
+                    </ui:CardExpander>
+                </StackPanel>
+            </ws:ScrollViewer>
+        </Grid>
     </Grid>
 </Page>
