--- a/SmartManager/Views/Pages/EditFace.xaml
+++ b/SmartManager/Views/Pages/EditFace.xaml
@@ -61,19 +61,31 @@
                                 Stretch="UniformToFill" />
                         </Grid>
                     </Grid>
-                    <Grid
+                    <ws:ScrollViewer
                         Grid.Row="1"
-                        Margin="32,48,32,0"
-                        HorizontalAlignment="Center"
-                        VerticalAlignment="Top">
-                        <ui:TextBox
+                        ws:StylusTouchDevice.Simulate="True"
+                        PanningMode="VerticalOnly">
+                        <StackPanel
+                            Margin="32,48,32,0"
                             HorizontalAlignment="Center"
-                            FontSize="32"
-                            Style="{StaticResource SelectableTextBlockStyle}"
-                            Text="{Binding ViewModel.Name, Mode=OneWay}"
-                            TextAlignment="Center"
-                            TextWrapping="Wrap" />
-                    </Grid>
+                            VerticalAlignment="Top">
+                            <ui:TextBox
+                                HorizontalAlignment="Center"
+                                FontSize="24"
+                                Style="{StaticResource SelectableTextBlockStyle}"
+                                Text="{Binding ViewModel.UID, Mode=OneWay}"
+                                TextAlignment="Center"
+                                TextWrapping="Wrap" />
+                            <ui:TextBox
+                                Margin="0,6,0,0"
+                                HorizontalAlignment="Center"
+                                FontSize="24"
+                                Style="{StaticResource SelectableTextBlockStyle}"
+                                Text="{Binding ViewModel.Name, Mode=OneWay}"
+                                TextAlignment="Center"
+                                TextWrapping="Wrap" />
+                        </StackPanel>
+                    </ws:ScrollViewer>
                     <Grid
                         Grid.Row="2"
                         Margin="16"
@@ -114,6 +126,24 @@
                         <ui:CardExpander.Content>
                             <StackPanel>
                                 <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
+                                    <ui:TextBlock
+                                        Grid.Column="0"
+                                        FontSize="24"
+                                        Text="UID：" />
+                                    <ui:TextBox
+                                        Grid.Column="1"
+                                        Margin="5,0,0,0"
+                                        BorderThickness="0"
+                                        FontSize="18"
+                                        IsReadOnly="True"
+                                        Text="{Binding ViewModel.UID, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                        TextWrapping="Wrap" />
+                                </Grid>
+                                <Grid Margin="0,6,0,0">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="Auto" />
                                         <ColumnDefinition Width="*" />
