--- a/SmartLibrary/Views/Pages/EditBook.xaml
+++ b/SmartLibrary/Views/Pages/EditBook.xaml
@@ -87,17 +87,11 @@
                         Grid.Row="1"
                         ws:StylusTouchDevice.Simulate="True"
                         PanningMode="VerticalOnly">
-                        <Grid
+                        <StackPanel
                             Margin="32,16,32,0"
                             HorizontalAlignment="Center"
                             VerticalAlignment="Top">
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="Auto" />
-                            </Grid.RowDefinitions>
                             <ui:TextBox
-                                Grid.Row="0"
                                 HorizontalAlignment="Center"
                                 FontSize="24"
                                 Style="{StaticResource SelectableTextBlockStyle}"
@@ -105,7 +99,6 @@
                                 TextAlignment="Center"
                                 TextWrapping="Wrap" />
                             <ui:TextBox
-                                Grid.Row="1"
                                 Margin="0,8,0,0"
                                 HorizontalAlignment="Center"
                                 FontSize="24"
@@ -114,7 +107,6 @@
                                 TextAlignment="Center"
                                 TextWrapping="Wrap" />
                             <ui:TextBox
-                                Grid.Row="2"
                                 Margin="0,8,0,0"
                                 HorizontalAlignment="Center"
                                 FontSize="24"
@@ -122,7 +114,7 @@
                                 Text="{Binding ViewModel.PressText, Mode=OneWay}"
                                 TextAlignment="Center"
                                 TextWrapping="Wrap" />
-                        </Grid>
+                        </StackPanel>
                     </ws:ScrollViewer>
                     <Grid
                         Grid.Row="2"
